Fix some font weights and spacing
- Make h2s light and set the letter-spacing correctly
- Set a max width on images
- Fix the margin on the abstract

--- a/_sass/typography.sass
+++ b/_sass/typography.sass
@@ -1,3 +1,6 @@
+=light
+  font-weight: 300
+  
 =bold
   font-weight: 700
 
@@ -10,14 +13,16 @@ body
   font-weight: 400
   font-size: $font-size
   line-height: $line-height
-  margin: 0
-  
-h1
-  font-size: ms(0)
-  letter-spacing: 10%
-  text-transform: uppercase
+  margin: ms(-2)
   
 h2
+  +light
+  font-size: ms(0)
+  letter-spacing: 0.1em
+  text-transform: uppercase
+  margin-bottom: ms(1)
+  
+h3
   font-size: ms(0)
   font-weight: bold
 
@@ -25,6 +30,12 @@ h2
 p
   font-size: ms(0)
   margin: 0
+
+* + p
+  margin-top: ms(-1)
+  
+img
+  max-width: 100%
   
 a
   color: $link-color
@@ -38,9 +49,6 @@ a
   &:visited
     color: darken($link-color, 30%)
   
-* + p
-  margin-top: ms(-1)
-
 dt
   font-size: ms(-1)
   line-height: ms(0)
@@ -62,4 +70,4 @@ address
 .abstract
   font-size: ms(2)
   line-height: 1
-  text-align: inherit
+  margin: ms(1) 0
